--- a/IS413_Project1_Scheduler/Views/_ViewImports.cshtml
+++ b/IS413_Project1_Scheduler/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IS413_Project1_Scheduler
 @using IS413_Project1_Scheduler.Models
+@using IS413_Project1_Scheduler.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
