--- a/IS413_Project1_Scheduler/Views/Home/AddAppointmentInfo.cshtml
+++ b/IS413_Project1_Scheduler/Views/Home/AddAppointmentInfo.cshtml
@@ -3,8 +3,11 @@
 @model Appointment
 
 <form asp-action="AddAppointmentInfo" method="post">
-    <label asp-for="DateAndTime">Date: </label>
-    <input asp-for="DateAndTime" /><br />
+    <label asp-for="DateAndTime">Date: @ViewBag.Time</label>
+    <input value="@ViewBag.Time" asp-for="DateAndTime"/><br />
+
+    @*<label asp-for="DateAndTime">Date: </label>
+    <input value="@ViewBag.Time" readonly /><br />*@
 
     <label asp-for="Group.GroupName">Group Name: </label>
     <input asp-for="Group.GroupName" /><br />
