--- a/IS413_Project1_Scheduler/Views/Shared/_Layout.cshtml
+++ b/IS413_Project1_Scheduler/Views/Shared/_Layout.cshtml
@@ -49,10 +49,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
+                        <a class="nav-link" asp-controller="Home" asp-action="ScheduleAppointment">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">View Appointments</a>
+                        <a class="nav-link" asp-controller="Home" asp-action="ViewAppointments">View Appointments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="AddAppoints">Add Appointments</a>
                     </li>
                 </ul>
             </div>
