--- a/IS413_Project1_Scheduler/Views/Home/Index.cshtml
+++ b/IS413_Project1_Scheduler/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to the Temple Scheduler App</h1>
+    <h3>We are excited to have you come visit the temple</h3>
+    <img src="~/img/LaytonTemple.jpg" /><br />
+    <a href="@Url.Action("ScheduleAppointment")" class="elements">Signup for an appointment</a>
 </div>
