--- a/IS413_Project1_Scheduler/Views/Home/AddAppointmentInfo.cshtml
+++ b/IS413_Project1_Scheduler/Views/Home/AddAppointmentInfo.cshtml
@@ -6,17 +6,17 @@
     <label asp-for="DateAndTime">Date: </label>
     <input value="@ViewBag.Time" asp-for="DateAndTime" readonly /><br />
 
-    <label asp-for="Group.GroupName">Group Name: </label>
-    <input asp-for="Group.GroupName" /><br />
+    <label asp-for="GroupName">Group Name: </label>
+    <input asp-for="GroupName" /><br />
 
     <label asp-for="GroupSize">Group Size: </label>
     <input asp-for="GroupSize" /><br />
 
-    <label asp-for="Group.Email">Email: </label>
-    <input asp-for="Group.Email" /><br />
+    <label asp-for="Email">Email: </label>
+    <input asp-for="Email" /><br />
 
-    <label asp-for="Group.PhoneNumber">Phone Number: </label>
-    <input asp-for="Group.PhoneNumber" /><br />
+    <label asp-for="PhoneNumber">Phone Number: </label>
+    <input asp-for="PhoneNumber" /><br />
 
     <button type="submit">Schedule Appointment</button>
 </form>
