--- a/IS413_Project1_Scheduler/Views/Home/ViewAppointments.cshtml
+++ b/IS413_Project1_Scheduler/Views/Home/ViewAppointments.cshtml
@@ -10,5 +10,5 @@
 @foreach (Appointment appointment in Model.Appointments)
 {
     <div>@appointment.AppointmentId;</div>
-    <div>@appointment.Group.Email;</div>
+    <div>@appointment.Email;</div>
 }
