--- a/IS413_Project1_Scheduler/Views/Home/ScheduleAppointment.cshtml
+++ b/IS413_Project1_Scheduler/Views/Home/ScheduleAppointment.cshtml
@@ -6,32 +6,54 @@
 
 
 @model AppointmentListViewModel
+@*<form>
+        <select>
+            @foreach (DateTime day in Model.AvailableDays)
+            {
+                <option value="day" name="day" id="day"> @day.DayOfWeek, @day.ToString("MMM") @day.Day</option>
+            }
 
-<form>
-    <select>
-        @foreach (DateTime day in Model.AvailableDays)
-        {
-            <option value="day" name="day" id="day"> @day.DayOfWeek, @day.ToString("MMM") @day.Day</option>
-        }
-    </select>
-</form>
+        </select>
+    </form>*@
 
-
-
-@foreach (DateTime time in Model.AvailableTimes.FindAll(x => x.Day == 17))
-{
-    bool Available = !Model.Appointments.Any(q => q.DateAndTime == time);
-
-    if (Available)
+<h3 class="mt-5 mb-5 text-center" >Choose a Time</h3>
+<div class="continer mt-5 mb-5" style="display:flex; width:100%">
+    @foreach (List<DateTime> timeList in Model.AvailableTimes)
     {
-        <div class="btn btn-info">
-            <form asp-action="AddAppointmentInfo" method="get">
-                <input type="hidden" value="@time" name="ScheduledTime" />
-                <button class="btn" type="submit">@time</button>
-            </form>
+        
+
+        <div class="" style="display:flex; flex-direction:column">
+            @foreach (DateTime time in timeList)
+            {
+                bool Available = !Model.Appointments.Any(q => q.DateAndTime == time);
+
+                if(time.Hour == 8)
+                {
+                    <div class="btn m-1 font-weight-bolder" style="font-size:120%">
+                        <button class="btn" readonly><b><u>@timeList[0].ToString("MMMM"), @timeList[0].Day</u></b></button>
+                    </div>
+                }
+
+                if (Available)
+                {
+                    <div class="btn btn-info m-1">
+                        <form asp-action="AddAppointmentInfo" method="get">
+                            <input type="hidden" value="@time" name="ScheduledTime" />
+                            <button class="btn" type="submit">@time.ToString("hh:mm tt")</button>
+                        </form>
+                    </div>
+                }
+                else
+                {
+                    <div class="btn m-1">
+
+                        <button class="btn" readonly>@time.ToString("hh:mm tt")</button>
+
+                    </div>
+                }
+            }
         </div>
+
+
     }
-    
-
-
-}
+</div>
