--- a/IS413_Project1_Scheduler/Views/Home/AddAppointmentInfo.cshtml
+++ b/IS413_Project1_Scheduler/Views/Home/AddAppointmentInfo.cshtml
@@ -1,70 +1,51 @@
-﻿@model Appointment
+﻿@{
+    ViewData["Title"] = "Add Appointment";
+    ViewData["Header"] = "Add Appointment";
+}
 
+@model Appointment
 
+<div class="text-center mb-5">
+    <br />
+    <h5>Input your information below to sign up for the temple tour</h5>
+    <br />
 
+    @* Form stores appointment data *@
+    <form asp-action="AddAppointmentInfo" method="post">
 
-<br />
+        <div class="form-group">
+            <label asp-for="DateAndTime">Date: </label>
+            <input value="@ViewBag.Time" asp-for="DateAndTime" readonly /><br />
+        </div>
 
-<h3>Add Appointment</h3>
+        <div class="form-group">
+            <label asp-for="GroupName">Group Name: </label>
+            <input asp-for="GroupName" /><br />
+            <div>@Html.ValidationMessageFor(model => model.GroupName, "", new { @class = "text-danger" })</div>
+        </div>
 
-<br />
+        <div class="form-group">
+            <label asp-for="GroupSize">Group Size: </label>
+            <input asp-for="GroupSize" /><br />
+            <div>@Html.ValidationMessageFor(model => model.GroupSize, "", new { @class = "text-danger" })</div>
+        </div>
 
-<h5>Input your information below to sign up for the temple tour</h5>
+        <div class="form-group">
+            <label asp-for="Email">Email: </label>
+            <input asp-for="Email" /><br />
+            <div>@Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })</div>
+        </div>
 
-<br />
+        <div class="form-group">
+            <label asp-for="PhoneNumber">Phone Number: </label>
+            <input asp-for="PhoneNumber" /><br />
+            <div>@Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })</div>
+        </div>
 
+        <div class="form-group">
+            <button class="btn btn-info" type="submit">Schedule Appointment</button>
+        </div>
 
+    </form>
 
-
-<form asp-action="AddAppointmentInfo" method="post">
-
-    <div class="form-group">
-
-        <label asp-for="DateAndTime">Date: </label>
-
-        <input value="@ViewBag.Time" asp-for="DateAndTime" readonly /><br />
-
-    </div>
-
-    <div class="form-group">
-
-        <label asp-for="GroupName">Group Name: </label>
-
-        <input asp-for="GroupName" /><br />
-
-    </div>
-
-    <div class="form-group">
-
-        <label asp-for="GroupSize">Group Size: </label>
-
-        <input asp-for="GroupSize" /><br />
-
-    </div>
-
-    <div class="form-group">
-
-        <label asp-for="Email">Email: </label>
-
-        <input asp-for="Email" /><br />
-
-    </div>
-
-    <div class="form-group">
-
-        <label asp-for="PhoneNumber">Phone Number: </label>
-
-        <input asp-for="PhoneNumber" /><br />
-
-    </div>
-
-    <div class="form-group">
-
-        <button class="btn-dark" type="submit">Schedule Appointment</button>
-
-    </div>
-
-
-
-</form>
-
+</div>
